--- a/jniast/src/main/uk/ac/starlink/ast/package.html
+++ b/jniast/src/main/uk/ac/starlink/ast/package.html
@@ -2,6 +2,9 @@
 Provides an interface to the Starlink
 <a href="http://star-www.rl.ac.uk/star/docs/sun211.htx/sun211.html">AST</a>
 library.
+
+<h2>AST library vs. <tt>uk.ac.starlink.ast</tt> package</h2>
+
 The classes and methods here provide, via classes comprising native code
 which calls the underlying AST library, a complete interface to AST V1.8-3.
 The following sections discuss differences between the AST library
@@ -181,6 +184,36 @@ package is identical to that of AST (for the classes which appear in AST)</dd>
 <dd>The <code>setGrf</code> and <code>getGrf</code> methods of
 <code>Plot</code>s provide this functionality.
 </dl>
+
+
+<h2>Tolerance of absent native code</h2>
+
+Being substantially an interface to native code, this package breaks
+java's platform independence.  Client code may wish to invoke the
+package in such a way that it can tolerate being used on a platform
+where the native code (shared library) is not available.
+Of course the JNIAST functionality will be lost, but if that is not
+a fundamental part of the client code's functionality, it may be better
+to do this than to throw a fatal error.  This can make it possible to
+run (albeit with reduced functionality) on a wider range of platforms
+than would otherwise be possible.
+
+<p>To do this, code can use the {@link AstPackage#isAvailable} method,
+which indicates whether the requisite native code is available for use.
+If it is, then AST processing can take place as usual, but if not
+then as long as code avoids attempting to create or dereference 
+any instance of <tt>AstObject</tt> or its subclasses it should run 
+without errors <small>(I think)</small>.  Attempting to create or dereference 
+an <tt>AstObject</tt> when <tt>AstPackage.isAvailable</tt> returns
+<tt>false</tt> will normally result in a {@link java.lang.LinkageError}
+of some sort.
+
+<h2>Package status</h2>
+
+This package is a temporary measure; in due course it will be superceded
+by the pure java WCS package.  WCS is being actively worked on now (mid 2002),
+but the timescale for completion is uncertain.
+
 
 </body>
 
