--- a/hdx/src/main/uk/ac/starlink/hdx/package.html
+++ b/hdx/src/main/uk/ac/starlink/hdx/package.html
@@ -14,17 +14,24 @@ Provides the structuring for the HDX system.
 registers new types, and is responsible for managing the 
 implementations of the various factories required.</p>
 
-<p>HDX is defined as a DOM: an HDX is a DOM
-{@link org.w3c.dom.Document} node,
+<p>HDX is defined as a DOM.  This does not mean that an HDX object
+necessarily <em>is</em> a DOM -- it could be represented as a Source,
+as a SAX stream, or ultimately not in an XML form at all -- however,
+it is defined using DOM terminology, and all operations on it are
+representable in those terms.</p>
+
+<p>An HDX is a DOM {@link org.w3c.dom.Document} node,
 which has a document element of type <code>&lt;hdx&gt;</code>, which
 in turn contains other elements of <a href="#hdxtypes" >registered
 types</a>.  HDX does not define or constrain these other types
 (instead providing facilities for <a href="#newtypes" >defining
 them</a>), other than to require that they be defined in DOM terms.
+<!--
 The structure and semantics of these other types are defined using DOM
 terminology, and they are always representable as a DOM, and are
 navigable, manipulable, and in some cases modifiable, using that
-DOM.</p>
+DOM.-->
+</p>
 
 <p>The types are not generally processable using the DOM, however, and
 so they must be transformed into a Java object before work can be done
@@ -67,7 +74,7 @@ of them, and is responsible for normalising and validating files which
 purport to be Hdx instances.</dd>
 </dl>
 
-<p>The most important interface is:
+<p>The most important interfaces are:
 
 <dl>
 <dt>{@link uk.ac.starlink.hdx.HdxContainer}</dt>
@@ -77,6 +84,11 @@ from its original form -- a FITS or XML file, perhaps, or an object on
 the network -- into a <code>HdxContainer</code>.  <code>HdxFactory</code> is
 what achieves this, possibly with the background help of an
 <code>HdxDocumentFactory</code>.</dd>
+
+<dt>{@link uk.ac.starlink.hdx.HdxFacade}</dt>
+<dd>This is how a Java class represents itself to the DOM world.  See
+below.</dd>
+
 </dl>
 
 <p>The most important interfaces <em>for implementors</em> are:
@@ -106,16 +118,16 @@ element as a Java object.  The methods of this interface are not
 called directly by client code, but are implemented by those adding
 new types (such as Weather, say) to the Hdx system.</dd>
 
-<dt>{@link uk.ac.starlink.hdx.DOMFacade}</dt>
+<dt>{@link uk.ac.starlink.hdx.HdxFacade}</dt>
 <dd>This is the interface through which a Java object makes itself
 visible in DOM/Source terms.  Interfaces such as {@link
 uk.ac.starlink.ndx.Ndx} or {@link uk.ac.starlink.array.NDArray} have a
-<code>getDOMFacade</code> method.  This can be incorporated into a DOM
-based on {@link HdxDocument} by using that class's extension method
-{@link HdxDocument#createElement(HdxResourceType,DOMFacade)}: the
+<code>getHdxFacade</code> method.  This can be incorporated into a DOM
+based on {@link uk.ac.starlink.hdx.HdxDocument} by using that class's extension method
+{@link uk.ac.starlink.hdx.HdxDocument#createElement(HdxFacade)}: the
 resulting element behaves exactly like a <code>org.w3c.dom</code>
 element, except that all its DOM-building (and optionally
-DOM-mutating) methods are handled by the <code>DOMFacade</code>, which
+DOM-mutating) methods are handled by the <code>HdxFacade</code>, which
 knows exactly the state of the underlying object, and which can <em>return</em>
 the underlying object particularly easily.</dd>
 
@@ -284,16 +296,18 @@ uk.ac.starlink.hdx.HdxDocumentFactory}, which turns a URL into a DOM
 Document.</p>
 
 <p>Such extending classes are registered with the Hdx system using
-{@link HdxFactory#registerHdxDocumentFactory}, by a mechanism which is
-described in the {@link HdxFactory} class documentation.</p>
+{@link uk.ac.starlink.hdx.HdxFactory#registerHdxDocumentFactory}, by a mechanism which is
+described in the {@link uk.ac.starlink.hdx.HdxFactory} class documentation.</p>
 
 <p>These factories can be arbitrarily clever.  They can either create
 a simple DOM and wait for the work of reading the file to be done by
 the constructors registered with the type using
 {@link uk.ac.starlink.hdx.HdxResourceType#registerHdxResourceFactory}, or else the factory can construct the
-object, using a class which implements the {@link uk.ac.starlink.hdx.DOMFacade}
+object, using a class which implements the {@link uk.ac.starlink.hdx.HdxFacade}
 interface, and then create an Element which uses that facade using
-{@link uk.ac.starlink.hdx.HdxDocument#createElement(HdxResourceType,DOMFacade)}.</p>
+{@link uk.ac.starlink.hdx.HdxDocument#createElement(HdxFacade)}.  For
+further details about this route, including an example, see the {@link
+uk.ac.starlink.hdx.HdxDocumentFactory} documentation.</p>
 
 <p>That covers construction of a complete Hdx DOM from a URI.
 However, you should also handle, if appropriate, a reference to your
