ch ch ch ch changes

--- a/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/colinfo.html
@@ -23,6 +23,10 @@ or dragging the mouse to select several.
 When they are selected certain items in the Column menu can be used.
 
 <dl>
+<dt><strong>New synthetic column</strong>
+<dd>This allows you to add a new column based on the existing ones - 
+    see the section on <a href="synthetic.html>Synthetic columns</a>.
+
 <dt><strong>Delete selected column(s)</strong>
 <dd>Any selected columns will be deleted from the table in the main browser
     window.
