--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-read.html
@@ -41,7 +41,7 @@ Here is an example for MySQL:
 </pre>
 which would get a two-column table (the columns being "ra" and "dec"),
 constructed from certain rows from the table "swaa" in the database
-"astro1" on the local host, using the access priveliges of user mbt.
+"astro1" on the local host, using the access privileges of user mbt.
 
 <p>Fortunately you do not have to construct this by hand, there is
 a dialogue box to assist in putting it together.
