--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jdbc-write.html
@@ -19,7 +19,7 @@ Here is an example for MySQL:
 </pre>
 which would write the current contents of the browser into a new table
 called "newtab" in the database "astro1" on the local host with the
-access priveliges of user mbt.
+access privileges of user mbt.
 
 <p>Fortunately you do not have to construct this URL by hand, there is
 a dialogue to assist in putting it together.  You can use this by
