--- a/topcat/src/resources/uk/ac/starlink/topcat/help/jel.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/jel.html
@@ -5,7 +5,7 @@
 
 <p>The expressions used to define 
 <a href="synthetic.html">Synthetic Columns</a> and some 
-<a href="subsets">Row Subsets</a> are actually expressions in 
+<a href="subsets.html">Row Subsets</a> are actually expressions in 
 the Java language, which are compiled into Java bytecode before
 evaluation.  However, this does not mean that you need to be a 
 Java programmer to write them.  The syntax is pretty similar to C.
