--- a/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/plot.html
@@ -9,7 +9,7 @@ columns against each other.  The window is composed of several parts.
 <h4>Plotting Surface</h4>
 
 <p>On the plotting surface a marker is plotted for each item in the
-selected Row Subsets at a position determined by the 
+selected <a href="subsets.html">Row Subset</a>s at a position determined by the 
 values in the table columns selected to provide the X and Y values.
 A marker will only be plotted if both the X and Y values are not blank.
 If more than one subset is being plotted, they will be drawn using
@@ -23,6 +23,14 @@ a little practice but is easy to use after a couple of goes.
 If you get lost you can push the 
 Rescale button (<img src="../images/4way3.gif">) to return the 
 scaling to normal.
+
+<h4>Row Subset Selection</h4>
+
+You can use the "Subsets to plot" item on the Subsets menu to determine
+which subsets are plotted on the graph.  Different subsets are plotted
+using different markers, so you can see where different groups of results
+lie in relation to each other.
+
 
 <h4>Axis selectors</h4>
 
