--- a/topcat/src/resources/uk/ac/starlink/topcat/help/subsets.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/subsets.html
@@ -54,7 +54,7 @@ markers during plotting.
     against each other, and subsequently zoom in and out using the
     mouse.  If you zoom to display only some of the plotted points and
     then use the "New Subset From Visible" menu item or toolbar button
-    (<img src="../image/spoints5.gif">) then a new subset will be 
+    (<img src="../images/spoints5.gif">) then a new subset will be 
     created containing only rows represented by points in the field of
     view of the plot at the time.
 
