--- a/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
@@ -18,11 +18,6 @@ the following buttons:
     Also available as the "Open" item in the File menu.
     See the section on <a href="io.html#read">Loading tables</a>.
 
-<dt><img src="../images/Save24.gif"><strong>Save</strong>
-<dd>Write the table currently visible in the browser window to a file.
-    Also available as the "Save" item in the File menu.
-    See the section on <a href="io.html#write">Saving tables</a>.
-
 <dt><img src="../images/Copy24.gif"><strong>Duplicate</strong>
 <dd>Open a new browser window holding a copy of the currently visible table.
     This new window is not identical to the current one in that any 
@@ -30,6 +25,11 @@ the following buttons:
     for instance any rows not in the currently active subset can never
     be seen in the new browser.
     Also available as the "Duplicate" item in the File menu.
+
+<dt><img src="../images/Save24.gif"><strong>Save</strong>
+<dd>Write the table currently visible in the browser window to a file.
+    Also available as the "Save" item in the File menu.
+    See the section on <a href="io.html#write">Saving tables</a>.
 
 </dl>
    
@@ -73,6 +73,16 @@ Each operates on the column where the click was made:
 <dd>By right clicking on the 'row header' down 
 
 </dl>
+
+<h4>Subset Selection</h4>
+
+<p>The rows displayed in this window are not necessarily all the rows
+in the current table; they are those for a particular 
+<a href="subsets.html">Row Subset</a>.  At the bottom of the 
+window is a selector button which allows you to select which 
+subset you wish to see displayed.  By default, the entry "ALL" will
+be selected, which means all the rows are displayed.
+
 
 <h4>Editing Cells</h4>
 
