--- a/topcat/src/resources/uk/ac/starlink/topcat/help/fits-write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/fits-write.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h4>Saving to FITS format</h4>
 
