--- a/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/help.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h3>Help Window</h3>
 
@@ -14,19 +19,19 @@ these windows.
 <h4>Toolbar</h4>
 
 <dl>
-<dt><img src="../images/Back24.gif"><strong>Back</strong>
+<dt><img src="../images/Back24.gif">Back
 <dd>Moves backward through the list of topics in the order you have 
     looked at them.
 
-<dt><img src="../images/Forward24.gif"><strong>Forward</strong>
+<dt><img src="../images/Forward24.gif">Forward
 <dd>Moves forward through the list of topics in the order you have 
     looked at them.
 
-<dt><img src="../images/Print24.gif"><strong>Print</strong>
+<dt><img src="../images/Print24.gif">Print
 <dd>Pops up a dialogue to permit printing of the current page to a 
     file or printer.
 
-<dt><img src="../images/PageSetup24.gif"><strong>Page Setup</strong>
+<dt><img src="../images/PageSetup24.gif">Page Setup
 <dd>Pops up a dialogue to do printer setup.
 </dl>
 
