--- a/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/intro.html
@@ -1,8 +1,13 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
-<center><h1><img src="../images/tc3.gif">&nbsp;&nbsp;TOPCAT&nbsp;&nbsp;<a href="http://www.starlink.ac.uk/"><img src="../images/starlinklogo3.gif" border="0"></a></h1></center>
-<center><h2><u>T</u>ool for <u>OP</u>erations on <u>C</u>atalogues 
-    <u>A</u>nd <u>T</u>ables</h2></center>
+
+<h1><img src="../images/tc3.gif">&nbsp;&nbsp;TOPCAT&nbsp;&nbsp;<a href="http://www.starlink.ac.uk/"><img src="../images/starlinklogo3.gif" border="0"></a></h1>
+<h2><u>T</u>ool for <u>OP</u>erations on <u>C</u>atalogues 
+    <u>A</u>nd <u>T</u>ables</h2>
 
 <p>TOPCAT is a viewer and editor for tabular information.  
 It has been designed for
