--- a/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/release.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h2>Release Notes</h2>
 
@@ -7,13 +12,13 @@
 It is a general purpose viewer and editor for astronomical tabular
 data developed by <a href="http://www.starlink.ac.uk/">Starlink</a>.
 <dl>
-<dt><strong>Author</strong>
+<dt>Author
 <dd>Mark Taylor (Starlink, Bristol University)
 
-<dt><strong>Email</strong>
+<dt>Email
 <dd><a href="mailto:m.b.taylor@bristol.ac.uk">m.b.taylor@bristol.ac.uk</a>
 
-<dt><strong>WWW</strong>
+<dt>WWW
 <dd><a href="http://www.starlink.ac.uk/topcat/">http://www.starlink.ac.uk/topcat/</a>
 
 </dl>
