--- a/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/stats.html
@@ -10,30 +10,30 @@ statistical quantities calculated on <a href="#subsets">some or all</a> of
 the values in the data table column corresponding to that grid row:
 
 <dl>
-<dt><strong>Name</strong>
+<dt>Name
 <dd>The name of the column in the main table represented by this grid row.
 
-<dt><strong>Good cells</strong>
+<dt>Good cells
 <dd>The number of non-blank cells.
 
-<dt><strong>Bad cells</strong>
+<dt>Bad cells
 <dd>The number of blank cells; the sum of
     this value and the Good cells value will be the same for each
     column.
 
-<dt><strong>Mean</strong>
+<dt>Mean
 <dd>The mean value of the good cells.
 
-<dt><strong>S.D.</strong>
+<dt>S.D.
 <dd>The standard deviation of the good cells.
 
-<dt><strong>Minimum</strong>
+<dt>Minimum
 <dd>The minimum value.  For numeric columns the meaning of this is quite
     obvious.  For other columns, if an ordering can be reasonably defined
     on them, the 'smallest' value may be shown.  For instance string 
     values will show the entry which would be first alphabetically.
 
-<dt><strong>Maximum</strong>
+<dt>Maximum
 <dd>As minimum, but shows the largest values.
 
 </dl>
@@ -58,7 +58,7 @@ the main window.
 <h4>Toolbar</h4>
 
 <dl>
-<dt><img src="../images/Redo24.gif"><strong>Recalculate</strong>
+<dt><img src="../images/Redo24.gif">Recalculate
 <dd>Once statistics have been calculated for a given subset they are
     cached and not normally recalculated again.  
     Use this button if you want to force a recalculation because the
