--- a/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/synthetic.html
@@ -1,4 +1,8 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
 
 <h2>Synthetic Columns</h2>
@@ -19,7 +23,7 @@ the main browser window.
 <p>The Synthetic Column dialogue asks you to enter the following 
 pieces of information for the new column you will create:
 <dl>
-<dt><strong>Column Name</strong>
+<dt>Column Name
 <dd>The name of the new column.  This should preferably be unique 
     (different from all the other column names).  It will be easier to
     use it in other expressions if it also
@@ -31,17 +35,17 @@ pieces of information for the new column you will create:
     <li>Not too long
     </ul>
 
-<dt><strong>Column Units</strong>
+<dt>Column Units
 <dd>The units of the column.  If the quantity it represents is dimensionless
     or you don't know the units, this can be left blank.  It would be
     a good idea to use a similar format for the units to that used for
     the existing columns in the table.
 
-<dt><strong>Column Description</strong>
+<dt>Column Description
 <dd>A short textual description of what the values contained by this 
     column are.  May be left blank.
 
-<dt><strong>Expression</strong>
+<dt>Expression
 <dd>This is the algebraic expression which defines the values that the
     cells in the new column of the table will have.  It may be any 
     legal expression which returns a primitive or object.  Broadly
