--- a/topcat/src/resources/uk/ac/starlink/topcat/help/windows.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/windows.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 <h2>Windows</h2>
 
 <p>When running TOPCAT can display a number of windows on the screen,
@@ -11,23 +16,23 @@ toolbar.
 
 <p>All the main windows have some features in common:
 <dl>
-<dt><img src="../images/multiply4.gif"><strong>Close</strong>
+<dt><img src="../images/multiply4.gif">Close
 <dd>The Close button on the toolbar or the "Close" item in the 
     File menu will close the window.
     When the last window is closed the application should exit.
 
-<dt><img src="../images/blank24.gif"><strong>Exit</strong>
+<dt><img src="../images/blank24.gif">Exit
 <dd>The "Exit" item in the File menu
     will exit TOPCAT straight away regardless of what windows are open.
 
-<dt><img src="../images/Help3.gif"><strong>Help</strong>
+<dt><img src="../images/Help3.gif">Help
 <dd>The Help button on the toolbar or the "Help browser" 
     item in the Help menu will bring up the help browser (this window).
     If context-sensitive help is available from this point
     (e.g. help about the window in which the button was pressed) then
     the browser will come up displaying the relevant page.
 
-<dt><img src="../images/blank24.gif"><strong>About</strong>
+<dt><img src="../images/blank24.gif">About
 <dd>The "About" item in the Help menu
     will pop up a short message about the TOPCAT application.
 </dl>
@@ -36,21 +41,27 @@ The main windows available are these:
 <dl>
 <dt><img src="../images/browser1.gif">
     <a href="browser.html">Table browser window</a>
+<dd>
 
 <dt><img src="../images/colmeta0.gif">
     <a href="colinfo.html">Column metadata window</a>
+<dd>
 
 <dt><img src="../images/sigma0.gif">
     <a href="stats.html">Statistics window</a>
+<dd>
 
 <dt><img src="../images/plot0.gif">
     <a href="plot.html">Plot window</a>
+<dd>
 
 <dt><img src="../images/tablemeta0.gif">
     <a href="param.html">Table metadata window</a>
+<dd>
 
 <dt><img src="../images/Help3.gif">
     <a href="help.html">Help window</a>
+<dd>
 </dl>
 
 </body>
