--- a/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/browser.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h3>Browser Window</h3>
 
@@ -13,12 +18,12 @@ of the tables.
 <p>In addition to the tools to show other windows, the toolbar contains
 the following buttons:
 <dl>
-<dt><img src="../images/Open24.gif"><strong>Open</strong>
+<dt><img src="../images/Open24.gif">Open
 <dd>Open a new table in a new browser window.  
     Also available as the "Open" item in the File menu.
     See the section on <a href="io.html#read">Loading tables</a>.
 
-<dt><img src="../images/Copy24.gif"><strong>Duplicate</strong>
+<dt><img src="../images/Copy24.gif">Duplicate
 <dd>Open a new browser window holding a copy of the currently visible table.
     This new window is not identical to the current one in that any 
     subsetting or sorting applied will be intrinsic to the new one, so
@@ -26,7 +31,7 @@ the following buttons:
     be seen in the new browser.
     Also available as the "Duplicate" item in the File menu.
 
-<dt><img src="../images/Save24.gif"><strong>Save</strong>
+<dt><img src="../images/Save24.gif">Save
 <dd>Write the table currently visible in the browser window to a file.
     Also available as the "Save" item in the File menu.
     See the section on <a href="io.html#write">Saving tables</a>.
@@ -38,7 +43,7 @@ the following buttons:
 <p>The following actions are available from menus only:
 <dl>
 
-<dt><strong>Mirage</strong></dt>
+<dt>Mirage</dt>
 <dd>Depending on configuration, it may be possible to launch 
     the external application Mirage from the Lauch menu.
     See <a href="mirage.html#launch">Launching Mirage</a>.
@@ -52,24 +57,24 @@ the following actions can be performed.
 Each operates on the column where the click was made:
 <dl>
 
-<dt><strong>Delete</strong>
+<dt>Delete
 <dd>Delete the column from this table.
     Any other columns which depend on it (for instance synthetic columns
     defined in terms of its values) will be unaffected.  The column
     cannot be undeleted.
 
-<dt><strong>Sort up</h4>
+<dt>Sort up</h4>
 <dd>Sort in ascending order.
     The rows in the table will be re-ordered so that the row with the
     lowest values in the selected column are nearest the top of the table.
     The original row number of each row will be displayed in the 
     'row header' on the left of the window.
 
-<dt><strong>Sort down</h4>
+<dt>Sort down</h4>
 <dd>Sort in descending order.
     Like <strong>Sort up</strong> but reversed.
 
-<dt><strong>Unsort</h4>
+<dt>Unsort</h4>
 <dd>By right clicking on the 'row header' down 
 
 </dl>
