--- a/topcat/src/resources/uk/ac/starlink/topcat/help/subsets.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/subsets.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 <h2>Row Subsets</h2>
 
 <p>An useful feature of the TOPCAT is the ability to define
@@ -20,7 +25,7 @@ markers during plotting.
 <p>You can define a Row Subset in one of the following ways:
 
 <dl>
-<dt><strong>Selecting rows in the browser</strong>
+<dt>Selecting rows in the browser
 <dd>You can select a single row in the main table browser window by 
     clicking on it, or select a group of adjacent rows by dragging 
     the mouse over them.  You can add more rows to the selection by
@@ -35,7 +40,7 @@ markers during plotting.
     top few rows of the table you can easily create a subset consisting
     of the highest values of a given field.
 
-<dt><strong>Defining an algebraic expression</strong>
+<dt>Defining an algebraic expression
 <dd>If you select the "New Subset Expression" item from the Subsets
     menu in the main browser, you will be able to enter an algebraic
     expression.  This is a java-like expression which can refer to the
@@ -44,12 +49,12 @@ markers during plotting.
     in that subset or not.  The <a href="jel.html">Expression Syntax</a>
     section explains more about how to specify these.
 
-<dt><strong>Boolean columns</strong>
+<dt>Boolean columns
 <dd>Any column which has a boolean (true/false) type value can be used
     as a subset; rows in which it has a true value are in the subset
     and others are not.
     
-<dt><strong>Visible plotted points</strong>
+<dt>Visible plotted points
 <dd>In the <a href="plot.html">Plot Window</a> you can plot columns
     against each other, and subsequently zoom in and out using the
     mouse.  If you zoom to display only some of the plotted points and
@@ -80,13 +85,13 @@ subset will be applied immediately in the main browser window.
 <p>Once a Row Subset is defined it can be used in one of the following ways:
 
 <dl>
-<dt><strong>Browser display</strong>
+<dt>Browser display
 <dd>The "Apply Subset" item in the Subsets menu of the main browser window
     allows you to choose a subset from the list of those defined.  
     Only rows in the subset that is chosen will show up in the browser
     window.
 
-<dt><strong>Exporting Tables</strong>
+<dt>Exporting Tables
 <dd>If a subset has been applied (and hence is active in restricting the
     rows which are visible in the main browser window) then saving the table,
     or exporting it to a new viewer using the <img src="../images/Copy24.gif"> 
@@ -94,13 +99,13 @@ subset will be applied immediately in the main browser window.
     or launching Mirage from TOPCAT will all cause the restricted set of
     rows only to be exported.
 
-<dt><strong>Calculating Statistics</strong>
+<dt>Calculating Statistics
 <dd>In the <a href="stats.html">Statistics Window</a> you can calculate
     statistics not just for the column values in the whole table, but
     for any defined subset of the rows.  Use the subset selector
     button at the bottom of the window.
     
-<dt><strong>Plotting</strong>
+<dt>Plotting
 <dd>In the <a href="plot.html">Plot Window</a> the plot is drawn with 
     different markers for points appearing in different subsets.
     Use the "Subsets to Plot" item in the Subsets menu to select which
