--- a/topcat/src/resources/uk/ac/starlink/topcat/help/text-write.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/text-write.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h4>Saving to Text format</h4>
 
@@ -8,14 +13,14 @@ designed to be read by humans.  No reader exists for this format.
 
 <p>Here is an example of a short 3x4 table written in this format:
 <pre>
-+---------------+---------------+---------------+
-| FLUX          | DELTAX        | DELTAY        |
-+---------------+---------------+---------------+
-| -7.859574E-4  | -7.0277805E-5 | -5.2222218E-5 |
-| -7.4827415E-4 | 3.6666646E-5  | 3.5555564E-5  |
-| 7.4292155E-4  | -4.7500023E-5 | 8.286507E-12  |
-| -7.0536503E-4 | -7.0277805E-5 | -5.2222218E-5 |
-+---------------+---------------+---------------+
+    +---------------+---------------+---------------+
+    | FLUX          | DELTAX        | DELTAY        |
+    +---------------+---------------+---------------+
+    | -7.859574E-4  | -7.0277805E-5 | -5.2222218E-5 |
+    | -7.4827415E-4 | 3.6666646E-5  | 3.5555564E-5  |
+    | 7.4292155E-4  | -4.7500023E-5 | 8.286507E-12  |
+    | -7.0536503E-4 | -7.0277805E-5 | -5.2222218E-5 |
+    +---------------+---------------+---------------+
 </pre>
 
 </body>
