--- a/topcat/src/resources/uk/ac/starlink/topcat/help/wdc-read.html
+++ b/topcat/src/resources/uk/ac/starlink/topcat/help/wdc-read.html
@@ -1,5 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="topcat.css" title="Style">
+</head>
 <body>
+
 
 <h4>Reading World Data Centre tables</h4>
 
@@ -9,15 +14,15 @@ for Solar Terrestrial Physics</a>
 The format itself apparently has no name, but files in this format
 look something like the following:
 <pre>
-Column formats and units - (Fixed format columns which are single space seperated.)
-------------------------
-Datetime (YYYY mm dd HHMMSS)            %4d %2d %2d %6d      -
-                                        %1s                  
-aa index - 3-HOURLY (Provisional)       %3d                  nT
-
-2000 01 01 000000  67
-2000 01 01 030000  32
-    ...
+  Column formats and units - (Fixed format columns which are single space seperated.)
+  ------------------------
+  Datetime (YYYY mm dd HHMMSS)            %4d %2d %2d %6d      -
+                                          %1s                  
+  aa index - 3-HOURLY (Provisional)       %3d                  nT
+  
+  2000 01 01 000000  67
+  2000 01 01 030000  32
+      ...
 </pre>
 
 <p>Compressed files, or ones referred to as URLs, may be used.
